--- a/example/css/switcher.styl
+++ b/example/css/switcher.styl
@@ -5,5 +5,8 @@ org-switcher-menu
     height: 60px !important
 
   daisho-menu-widget
-    font-size: 10px
+    font-size: .9em !important
     padding: 0px !important
+
+  daisho-inline-text-control
+    padding: 19px 20px !important
